Fix gap property in admindash.css

--- a/admindash.css
+++ b/admindash.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: white;
-  gap: ;
+
   margin: 20px 300px;
   padding: 10px;
 }
